added new game set up that sends inputs to the gameboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,16 @@
 <resources>
     <string name="app_name">DotsAndBoxes</string>
-    <string name="Board_Size">Board Size</string>
+    <string name="board_size">Board Size</string>
     <string name="players">Players</string>
-    <string name="name1">Name</string>
-    <string name="name2">Name</string>
-    <string name="name3">Name</string>
-    <string name="name4">Name</string>
-    <string name="start">Start</string>
-    <string name="help">Help</string>
+    <string name="name">Name</string>
+    <string name="players_text">Players</string>
+    <string name="boardSizeDropDownDes">4 x 4</string>
+    <string name="playerNumDeafult">2</string>
+    <string name="startButton">Start</string>
+    <string name="player4Enter">Player 4</string>
+    <string name="player3Enter">Player 3</string>
+    <string name="player2Enter">Player 2</string>
+    <string name="player1Enter">Player 1</string>
     <string-array name="players_list">
         <item>2</item>
         <item>3</item>
