--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="player3Enter">Player 3</string>
     <string name="player2Enter">Player 2</string>
     <string name="player1Enter">Player 1</string>
+    <string name="instructions">
+        Starting with an empty grid of dots, players take turns, adding a single horizontal or vertical line between two unjoined adjacent dots.<br/><br/>
+        A player who completes the fourth side of a 1×1 box earns one point and takes another turn.<br/><br/>
+        The game ends when no more lines can be placed. The winner of the game is the player with the most points.</string>
     <string-array name="players_list">
         <item>2</item>
         <item>3</item>
