--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
         Starting with an empty grid of dots, players take turns, adding a single horizontal or vertical line between two unjoined adjacent dots.<br /><br />
         A player who completes the fourth side of a 1×1 box earns one point and takes another turn.<br /><br />
         The game ends when no more lines can be placed. The winner of the game is the player with the most points.</string>
+    <string name="this_is_a_popup_window">This is a popup window.</string>
     <string-array name="players_list">
         <item>2</item>
         <item>3</item>
